integration_tests/codegen_fail/fail/interface/downcast_method_wrong_input_args.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL interface expects trait method to accept `&self` only and, optionally, `&Context`
  --> $DIR/downcast_method_wrong_input_args.rs:10:10
   |
10 |     fn a(&self, ctx: &(), rand: u8) -> Option<&Human> {
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: https://spec.graphql.org/June2018/#sec-Interfaces

error[E0412]: cannot find type `CharacterValue` in this scope
  --> $DIR/downcast_method_wrong_input_args.rs:16:18
   |
16 | #[graphql(impl = CharacterValue)]
   |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Character` in this scope
  --> $DIR/downcast_method_wrong_input_args.rs:22:6
   |
22 | impl Character for Human {}
   |      ^^^^^^^^^ not found in this scope
